# lootcoin

./: .dockerignore  .env.example  .gitignore  Cargo.toml  ECONOMY.md  QUICKSTART.md  README.md  dev.config.js  docker-compose.yml  simulate_economy.py  sonar-project.properties
.github/workflows/: docker-publish.yml  dockerhub-description.yml  release.yml  sonarqube-scan.yml
grafana/dashboards/: lootcoin.json
grafana/provisioning/dashboards/: lootcoin.yml
lootcoin-faucet/: Cargo.toml  DOCKERHUB.md  Dockerfile  README.md
lootcoin-faucet/src/: main.rs
lootcoin-miner/: .gitignore  Cargo.toml  DOCKERHUB.md  Dockerfile  README.md  build.rs
lootcoin-miner/kernels/: cubehash_mine.cu
lootcoin-miner/src/: gpu.rs  main.rs
lootcoin-node/: Cargo.toml  DOCKERHUB.md  Dockerfile  README.md
lootcoin-node/src/: api.rs  blockchain.rs  checkpoints.rs  db.rs  gossip.rs  loot_ticket.rs  main.rs  mempool.rs  metrics.rs
lootcoin-wallet/: Cargo.toml  README.md
lootcoin-wallet/src/: derivation.rs  lib.rs
lootcoin-web/: .dockerignore  DOCKERHUB.md  Dockerfile  README.md  config.js  explorer.html  explorer.js  faucet.html  index.html  node.js  package.json  styles.css  tooltip.js  wallet.html  wallet.js  wordcode.js
lootcoin-web/lootcoin-wallet/: Cargo.toml  README.md
lootcoin-web/lootcoin-wallet/src/: lib.rs
packaging/homebrew/: lc.rb
