[package]
name = "lootcoin-faucet"
version = "1.2.1"
edition = "2021"
description = "Faucet service for bootstrapping the Lootcoin network"
authors = ["Matthieu Crepeau"]
license = "AGPL-3.0-only"

[dependencies]
lootcoin-core = "1.2"

axum          = "0.8"
tokio         = { version = "1.39", features = ["macros", "rt-multi-thread", "signal"] }
tower-http    = { version = "0.6", features = ["cors"] }

serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"

reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

hex           = "0.4"

tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
