[package]
name = "lootcoin-faucet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Faucet service for bootstrapping the Lootcoin network"

[dependencies]
lootcoin-core = { path = "../../lootcoin-core" }

axum          = "0.8"
tokio         = { version = "1.39", features = ["macros", "rt-multi-thread", "signal"] }
tower-http    = { version = "0.6", features = ["cors"] }

serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"

reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

hex           = "0.4"
redb          = "2"

tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
