[package]
name = "lootcoin-miner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Miner for the lootcoin cryptocurrency"
repository = "https://github.com/mcrepeau/lootcoin-miner"
readme = "README.md"

[features]
gpu = ["cudarc"]

[dependencies]
lootcoin-core = "1.4"
cudarc = { version = "0.9", optional = true, default-features = false, features = ["driver", "nvrtc"] }

rand          = "0.8"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
hex           = "0.4"
reqwest       = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio         = { version = "1.39", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream  = "0.1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow        = "1"
