[package]
name = "lootcoin-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lootcoin node implementing blockchain logic and API"
repository = "https://github.com/mcrepeau/lootcoin-node"
readme = "README.md"

[dependencies]
lootcoin-core = { workspace = true }

# Server and async runtime
axum          = "0.8"
tokio         = { version = "1.39", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream  = { version = "0.1", features = ["sync"] }
futures-util  = "0.3"

# HTTP middleware (CORS, tracing, rate limiting)
tower-http     = { version = "0.6", features = ["cors", "trace"] }
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
governor       = "0.10"
axum-client-ip = "1.3"

# Logging
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"

# Hashing / encoding
hex           = "0.4"
bincode       = "1.3"
cubehash      = "0.4"

# Storage
redb          = "2"

# HTTP client (used for peer sync)
reqwest       = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# URL parsing (peer validation)
url           = "2"

# Metrics
prometheus-client = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

