[package]
name = "lootcoin-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI wallet and WebAssembly bindings for Lootcoin"
repository = "https://github.com/mcrepeau/lootcoin-wallet"
readme = "README.md"

[lib]
# For browser WASM + optional native reuse
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lc"
path = "src/bin/lc.rs"

[dependencies]
lootcoin-core = "3.0"
wasm-bindgen  = "0.2"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
hex           = "0.4"
bip39         = "2"
rand          = "0.8"
hmac          = "0.12"
sha2          = "0.10"
# Enables WebCrypto-backed OsRng for all crates in the WASM dependency tree
# (including lootcoin-core's use of rand::rngs::OsRng via feature unification).
getrandom     = { version = "0.2", features = ["js"] }

# CLI-only dependencies — excluded from WASM builds automatically.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap    = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
dirs    = "5"


