[package]
name = "lootcoin-wallet"
version = "1.2.1"
edition = "2021"
description = "WebAssembly bindings for the Lootcoin wallet functionality"
repository = "https://github.com/mcrepeau/lootcoin-wallet"
authors = ["Matthieu Crepeau"]
readme = "README.md"
license = "AGPL-3.0-only"

[lib]
# For browser WASM + optional native reuse
crate-type = ["cdylib", "rlib"]

[dependencies]
lootcoin-core = "1.2"
wasm-bindgen  = "0.2"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
hex           = "0.4"
bip39         = "2"
rand          = "0.8"
# Enables WebCrypto-backed OsRng for all crates in the WASM dependency tree
# (including lootcoin-core's use of rand::rngs::OsRng via feature unification).
getrandom     = { version = "0.2", features = ["js"] }


